force-app/main/default/objects/Discount_Code__c/fields/Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code__c</fullName>
    <description>Field to store the percentage of discount to be applied</description>
    <inlineHelpText>Please provide a discount between 1% &amp; 100%</inlineHelpText>
    <label>Discount Code %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>