force-app/main/default/objects/Discount_Code__c/fields/Discount_Code_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code_Amount__c</fullName>
    <description>Field to store the amount for the discount code</description>
    <inlineHelpText>Please provide an amount to discount a event order by e.g. GBP 10.00. Please note that the Event Order may be reduced down to GBP 0.00 based on your selection</inlineHelpText>
    <label>Discount Code Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>