force-app/main/default/objects/Discount_Code__c/fields/Discount_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code_Description__c</fullName>
    <description>Field to store the description of the discount</description>
    <inlineHelpText>Please provide the description for this discount</inlineHelpText>
    <label>Discount Code Description</label>
    <type>TextArea</type>
</CustomField>