force-app/main/default/objects/Discount_Code__c/fields/Discount_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code_Name__c</fullName>
    <description>Field to store the name of discount</description>
    <inlineHelpText>an appropriate name for the discount code e.g. 10% early bird discount code</inlineHelpText>
    <label>Discount Code Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>