force-app/main/default/objects/Discount_Code__c/fields/Discount_Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code_Type__c</fullName>
    <description>Field to store the type of discount code</description>
    <inlineHelpText>You can either provide a % discount or an amount based discount. Please complete this field &amp; then the applicable discount % or amount field in this panel</inlineHelpText>
    <label>Discount Code Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount Code %</fullName>
            </value>
            <value>
                <fullName>Discount Code Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>