force-app/main/default/objects/Discount_Code__c/fields/Discount_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Discount_Coupon__c</fullName>
    <description>This field is used to store the Discount Coupon Code for this Discount.</description>
    <inlineHelpText>Please enter a discount code reference that you wish to provide to prospective attendees e.g EARLYBIRD-2536, ALUMNI-282 etc. Please provide this code to prospective attendees, NOT the Discount Code Name or Discount Code Record ID</inlineHelpText>
    <label>Discount Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>