force-app/main/default/objects/Discount_Code__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <description>Field to store the valid start date for the discount code</description>
    <inlineHelpText>Please provide a Valid To Date for this discount code. NOTE: this is an important field as discount codes will only be ‘in force’ on an event order within the dates provided</inlineHelpText>
    <label>Valid To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>