force-app/main/default/objects/Discount_Code__c/validationRules/Discount_code_fields_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_code_fields_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(  NOT( ISBLANK( Discount_Code__c ) ) ,
   NOT( ISBLANK(  Discount_Code_Amount__c ) )
)</errorConditionFormula>
    <errorMessage>Discount Code % and a Discount Code Amount fields can not be populated at the same time</errorMessage>
</ValidationRule>