force-app/main/default/objects/Discount_Code__c/validationRules/Discount_code_percentage_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_code_percentage_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Discount_Code__c  &gt; 1.0</errorConditionFormula>
    <errorMessage>Discount Code % cannot be more than 100%</errorMessage>
</ValidationRule>