force-app/main/default/objects/Discount_Code__c/validationRules/Validate_Valid_From_And_To.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Valid_From_And_To</fullName>
    <active>true</active>
    <description>Discount Code Valid From Should Not Be Greater Than Valid To</description>
    <errorConditionFormula>valid_From__c &gt; Valid_To__c</errorConditionFormula>
    <errorMessage>The Valid To date cannot be before the Valid From date</errorMessage>
</ValidationRule>