force-app/main/default/objects/Discount_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Discount_Code_Name__c</columns>
    <columns>Discount_Code_Type__c</columns>
    <columns>Discount_Code__c</columns>
    <columns>Discount_Code_Amount__c</columns>
    <columns>valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Discount Codes</label>
</ListView>