force-app/main/default/objects/Discount_Code__c/listViews/X2_Percentage_Based_Discounts.listView-meta.xml
<ListView>
    <fullName>X2_Percentage_Based_Discounts</fullName>
    <columns>NAME</columns>
    <columns>Discount_Code_Name__c</columns>
    <columns>Discount_Code_Type__c</columns>
    <columns>Discount_Code__c</columns>
    <columns>Discount_Code_Amount__c</columns>
    <columns>valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Discount_Code_Type__c</field>
        <operation>equals</operation>
        <value>Discount Code %</value>
    </filters>
    <label>2. Percentage Based Discounts</label>
</ListView>